# gracer-ai-train

./: convert_to_autotrain.py  dltv_scraper.py  gracer_ai_trainer.py  main.py  pyproject.toml
dltv_dataset/: dltv_dataset.json  dltv_dataset_autotrain.csv  dltv_ประถมศึกษาปีที่_1.json
