[project]
name = "dltv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "beautifulsoup4>=4.13.4",
    "datasets>=3.6.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
